# json-experiment

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  fuzz.sh
argv_printer/: argv_lib.c  argv_lib.h  argv_printer_libs.c  argv_printer_zero.c
examples/: array_deep.json  array_with_many_types.json  object_with_many_types.json
json_manip/: json_manip.c
m4/: NOTES
src/: json_manip.c
tests/unit/: Makefile.am  cmocka.h  test_argv_lib.c
